# RiskPulse

./: .gitignore  LETSWORKHARD_final_report.md  README.md  RELEASE_CHECKLIST.md  app.py  iteration1_claude_plan.md  iteration1_codex_plan.md  iteration2_claude_audit.md  iteration2_claude_plan.md  iteration2_codex_comparison.md  iteration2_codex_plan.md  iteration2_execution_report.md  iteration3_claude_audit.md  iteration3_claude_refined_next.md  iteration3_claude_refined_plan.md  iteration3_codex_comparison.md  iteration3_execution_report.md  iteration4_claude_plan.md  iteration4_codex_plan.md  iteration4_execution_report.md  pyproject.toml  requirements.txt
docs/: architecture.md  configuration.md  original_requirements.md  requirements-matrix.md
outputs/: index.html  riskpulse_main_AAPL_2025-09-30_2026-03-10.csv  riskpulse_main_AAPL_2025-12-04_2026-03-10.csv  riskpulse_main_AAPL_2026-02-06_2026-03-10.csv  riskpulse_prices_AAPL_2025-09-30_2026-03-10.csv  riskpulse_prices_AAPL_2025-12-04_2026-03-10.csv  riskpulse_prices_AAPL_2026-02-06_2026-03-10.csv
src/riskpulse/: __main__.py  main.py
src/riskpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/riskpulse/analytics/: metrics.py
src/riskpulse/cli/: parser.py  validators.py
src/riskpulse/data/: market_data.py
src/riskpulse/domain/: models.py
src/riskpulse/reporting/: charts.py  csv_exporter.py  filenames.py  (+1 more)
tests/integration/: test_pipeline_offline.py
tests/unit/: test_cli.py  test_market_data.py  test_metrics.py  test_validation.py  test_web_app_support.py
(+7 files in other folders)
